fix(acufuchs): visible links in dark mode, only link the good part of text

--- a/styles/acufuchs.css
+++ b/styles/acufuchs.css
@@ -13,6 +13,14 @@
 		--background: var(--wfg);
 		--foreground: var(--wbg);
 	}
+
+	a:visited {
+		color: fuchsia;
+	}
+
+	a {
+		color: cornflowerblue;
+	}
 }
 
 :root {
